--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -7,8 +7,8 @@
 	TRIGGER_NOT_HAS_CIVIC:3 "Does NOT have ['civic:$CIVIC$'] Civic"
 # MISC replaces
 # ------------------------------------------------------------
-	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YCorporate Empire§! §EEffects§!:"
-	COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$:"
+	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YCorporate Empire§! §EEffects§!"
+	COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$"
 
  BRANCH_OFFICE_BUILDING:0 "Holding Building"
  BRANCH_OFFICE_BUILDINGS:0 "Holding Buildings"
