--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -15413,8 +15413,8 @@
  mod_planet_politicians_all_industrial_upkeep_add: "$mod_planet_politicians_all_industrial_upkeep_mult$"
  mod_planet_politicians_all_basic_upkeep_add: "$mod_planet_politicians_all_basic_upkeep_mult$"
 
- # planet_administrators - £job_bureaucrat£ $job_bureaucrat_plural$ - [{'mult': '[GetAdministratorPluralWithIcon]'}]
- mod_base_planet_administrators: "£job_bureaucrat£ $job_bureaucrat_plural$"
+ # planet_administrators - [GetAdministratorPluralWithIcon]
+ mod_base_planet_administrators: "[GetAdministratorPluralWithIcon]"
 
  mod_planet_administrators_produces_mult: "[GetAdministratorPluralWithIcon] Output"
  mod_planet_administrators_upkeep_mult: "[GetAdministratorPluralWithIcon] Upkeep"
@@ -15450,39 +15450,39 @@
  mod_planet_administrators_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from [GetAdministratorPluralWithIcon]"
  mod_planet_administrators_all_basic_produces_mult: "$tec_loc_basic_resources$ from [GetAdministratorPluralWithIcon]"
 
- mod_planet_administrators_minerals_produces_add: "£minerals£ $minerals$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_food_produces_add: "£food£ $food$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_energy_produces_add: "£energy£ $energy$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_consumer_goods_produces_add: "£consumer_goods£ $consumer_goods$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_alloys_produces_add: "£alloys£ $alloys$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_physics_research_produces_add: "£physics_research£ $physics_research$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_society_research_produces_add: "£society_research£ $society_research$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_engineering_research_produces_add: "£engineering_research£ $engineering_research$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_rare_crystals_produces_add: "£rare_crystals£ $rare_crystals$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_volatile_motes_produces_add: "£volatile_motes£ $volatile_motes$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_exotic_gases_produces_add: "£exotic_gases£ $exotic_gases$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_unity_produces_add: "£unity£ $unity$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_influence_produces_add: "£influence£ $influence$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_living_metal_produces_add: "£sr_living_metal£ $sr_living_metal$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_zro_produces_add: "£sr_zro£ $sr_zro$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_dark_matter_produces_add: "£sr_dark_matter£ $sr_dark_matter$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_nanites_produces_add: "£nanites£ $nanites$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_minor_artifacts_produces_add: "£minor_artifacts£ $minor_artifacts$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_biomass_produces_add: "£sr_tec_biomass£ $sr_tec_biomass$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_ai_power_produces_add: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_local_produces_add: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_empire_produces_add: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_redirection_produces_add: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_ai_unobtainium_produces_add: "£ai_unobtainium£ $ai_unobtainium$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_amenities_produces_add: "$tec_loc_amenities$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_stability_produces_add: "$tec_loc_stability$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_trade_value_produces_add: "$tec_loc_trade_value$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_edict_funds_produces_add: "$tec_loc_edict_funds$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_biological_assembly_produces_add: "$tec_loc_organic_assembly$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_assembly_produces_add: "$tec_loc_assembly$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_research_produces_add: "$tec_loc_research_resources$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_industrial_produces_add: "$tec_loc_industrial_resources$ from £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_basic_produces_add: "$tec_loc_basic_resources$ from £job_bureaucrat£ $job_bureaucrat_plural$"
+ mod_planet_administrators_minerals_produces_add: "$mod_planet_administrators_minerals_produces_mult$"
+ mod_planet_administrators_food_produces_add: "$mod_planet_administrators_food_produces_mult$"
+ mod_planet_administrators_energy_produces_add: "$mod_planet_administrators_energy_produces_mult$"
+ mod_planet_administrators_consumer_goods_produces_add: "$mod_planet_administrators_consumer_goods_produces_mult$"
+ mod_planet_administrators_alloys_produces_add: "$mod_planet_administrators_alloys_produces_mult$"
+ mod_planet_administrators_physics_research_produces_add: "$mod_planet_administrators_physics_research_produces_mult$"
+ mod_planet_administrators_society_research_produces_add: "$mod_planet_administrators_society_research_produces_mult$"
+ mod_planet_administrators_engineering_research_produces_add: "$mod_planet_administrators_engineering_research_produces_mult$"
+ mod_planet_administrators_rare_crystals_produces_add: "$mod_planet_administrators_rare_crystals_produces_mult$"
+ mod_planet_administrators_volatile_motes_produces_add: "$mod_planet_administrators_volatile_motes_produces_mult$"
+ mod_planet_administrators_exotic_gases_produces_add: "$mod_planet_administrators_exotic_gases_produces_mult$"
+ mod_planet_administrators_unity_produces_add: "$mod_planet_administrators_unity_produces_mult$"
+ mod_planet_administrators_influence_produces_add: "$mod_planet_administrators_influence_produces_mult$"
+ mod_planet_administrators_sr_living_metal_produces_add: "$mod_planet_administrators_sr_living_metal_produces_mult$"
+ mod_planet_administrators_sr_zro_produces_add: "$mod_planet_administrators_sr_zro_produces_mult$"
+ mod_planet_administrators_sr_dark_matter_produces_add: "$mod_planet_administrators_sr_dark_matter_produces_mult$"
+ mod_planet_administrators_nanites_produces_add: "$mod_planet_administrators_nanites_produces_mult$"
+ mod_planet_administrators_minor_artifacts_produces_add: "$mod_planet_administrators_minor_artifacts_produces_mult$"
+ mod_planet_administrators_sr_tec_biomass_produces_add: "$mod_planet_administrators_sr_tec_biomass_produces_mult$"
+ mod_planet_administrators_sr_tec_ai_power_produces_add: "$mod_planet_administrators_sr_tec_ai_power_produces_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_local_produces_add: "$mod_planet_administrators_sr_tec_machine_processing_local_produces_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_empire_produces_add: "$mod_planet_administrators_sr_tec_machine_processing_empire_produces_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_redirection_produces_add: "$mod_planet_administrators_sr_tec_machine_processing_redirection_produces_mult$"
+ mod_planet_administrators_ai_unobtainium_produces_add: "$mod_planet_administrators_ai_unobtainium_produces_mult$"
+ mod_planet_administrators_amenities_produces_add: "$tec_loc_amenities$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_administrators_stability_produces_add: "$tec_loc_stability$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_administrators_trade_value_produces_add: "$tec_loc_trade_value$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_administrators_edict_funds_produces_add: "$tec_loc_edict_funds$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_administrators_biological_assembly_produces_add: "$mod_planet_administrators_biological_assembly_produces_mult$"
+ mod_planet_administrators_assembly_produces_add: "$mod_planet_administrators_assembly_produces_mult$"
+ mod_planet_administrators_all_research_produces_add: "$mod_planet_administrators_all_research_produces_mult$"
+ mod_planet_administrators_all_industrial_produces_add: "$mod_planet_administrators_all_industrial_produces_mult$"
+ mod_planet_administrators_all_basic_produces_add: "$mod_planet_administrators_all_basic_produces_mult$"
 
  mod_planet_administrators_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of [GetAdministratorPluralWithIcon]"
  mod_planet_administrators_food_upkeep_mult: "£food£ $food$ Upkeep of [GetAdministratorPluralWithIcon]"
@@ -15512,33 +15512,33 @@
  mod_planet_administrators_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of [GetAdministratorPluralWithIcon]"
  mod_planet_administrators_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of [GetAdministratorPluralWithIcon]"
 
- mod_planet_administrators_minerals_upkeep_add: "£minerals£ $minerals$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_food_upkeep_add: "£food£ $food$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_energy_upkeep_add: "£energy£ $energy$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_consumer_goods_upkeep_add: "£consumer_goods£ $consumer_goods$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_alloys_upkeep_add: "£alloys£ $alloys$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_physics_research_upkeep_add: "£physics_research£ $physics_research$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_society_research_upkeep_add: "£society_research£ $society_research$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_engineering_research_upkeep_add: "£engineering_research£ $engineering_research$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_rare_crystals_upkeep_add: "£rare_crystals£ $rare_crystals$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_volatile_motes_upkeep_add: "£volatile_motes£ $volatile_motes$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_exotic_gases_upkeep_add: "£exotic_gases£ $exotic_gases$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_unity_upkeep_add: "£unity£ $unity$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_influence_upkeep_add: "£influence£ $influence$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_living_metal_upkeep_add: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_zro_upkeep_add: "£sr_zro£ $sr_zro$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_dark_matter_upkeep_add: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_nanites_upkeep_add: "£nanites£ $nanites$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_minor_artifacts_upkeep_add: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_biomass_upkeep_add: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_ai_power_upkeep_add: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_local_upkeep_add: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_empire_upkeep_add: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_sr_tec_machine_processing_redirection_upkeep_add: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_ai_unobtainium_upkeep_add: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_research_upkeep_add: "$tec_loc_research_resources$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_industrial_upkeep_add: "$tec_loc_industrial_resources$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
- mod_planet_administrators_all_basic_upkeep_add: "$tec_loc_basic_resources$ Upkeep of £job_bureaucrat£ $job_bureaucrat_plural$"
+ mod_planet_administrators_minerals_upkeep_add: "$mod_planet_administrators_minerals_upkeep_mult$"
+ mod_planet_administrators_food_upkeep_add: "$mod_planet_administrators_food_upkeep_mult$"
+ mod_planet_administrators_energy_upkeep_add: "$mod_planet_administrators_energy_upkeep_mult$"
+ mod_planet_administrators_consumer_goods_upkeep_add: "$mod_planet_administrators_consumer_goods_upkeep_mult$"
+ mod_planet_administrators_alloys_upkeep_add: "$mod_planet_administrators_alloys_upkeep_mult$"
+ mod_planet_administrators_physics_research_upkeep_add: "$mod_planet_administrators_physics_research_upkeep_mult$"
+ mod_planet_administrators_society_research_upkeep_add: "$mod_planet_administrators_society_research_upkeep_mult$"
+ mod_planet_administrators_engineering_research_upkeep_add: "$mod_planet_administrators_engineering_research_upkeep_mult$"
+ mod_planet_administrators_rare_crystals_upkeep_add: "$mod_planet_administrators_rare_crystals_upkeep_mult$"
+ mod_planet_administrators_volatile_motes_upkeep_add: "$mod_planet_administrators_volatile_motes_upkeep_mult$"
+ mod_planet_administrators_exotic_gases_upkeep_add: "$mod_planet_administrators_exotic_gases_upkeep_mult$"
+ mod_planet_administrators_unity_upkeep_add: "$mod_planet_administrators_unity_upkeep_mult$"
+ mod_planet_administrators_influence_upkeep_add: "$mod_planet_administrators_influence_upkeep_mult$"
+ mod_planet_administrators_sr_living_metal_upkeep_add: "$mod_planet_administrators_sr_living_metal_upkeep_mult$"
+ mod_planet_administrators_sr_zro_upkeep_add: "$mod_planet_administrators_sr_zro_upkeep_mult$"
+ mod_planet_administrators_sr_dark_matter_upkeep_add: "$mod_planet_administrators_sr_dark_matter_upkeep_mult$"
+ mod_planet_administrators_nanites_upkeep_add: "$mod_planet_administrators_nanites_upkeep_mult$"
+ mod_planet_administrators_minor_artifacts_upkeep_add: "$mod_planet_administrators_minor_artifacts_upkeep_mult$"
+ mod_planet_administrators_sr_tec_biomass_upkeep_add: "$mod_planet_administrators_sr_tec_biomass_upkeep_mult$"
+ mod_planet_administrators_sr_tec_ai_power_upkeep_add: "$mod_planet_administrators_sr_tec_ai_power_upkeep_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_local_upkeep_add: "$mod_planet_administrators_sr_tec_machine_processing_local_upkeep_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_empire_upkeep_add: "$mod_planet_administrators_sr_tec_machine_processing_empire_upkeep_mult$"
+ mod_planet_administrators_sr_tec_machine_processing_redirection_upkeep_add: "$mod_planet_administrators_sr_tec_machine_processing_redirection_upkeep_mult$"
+ mod_planet_administrators_ai_unobtainium_upkeep_add: "$mod_planet_administrators_ai_unobtainium_upkeep_mult$"
+ mod_planet_administrators_all_research_upkeep_add: "$mod_planet_administrators_all_research_upkeep_mult$"
+ mod_planet_administrators_all_industrial_upkeep_add: "$mod_planet_administrators_all_industrial_upkeep_mult$"
+ mod_planet_administrators_all_basic_upkeep_add: "$mod_planet_administrators_all_basic_upkeep_mult$"
 
  # planet_executives - £job_executive£ $job_executive_plural$
  mod_base_planet_executives: "£job_executive£ $job_executive_plural$"
