--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -224,7 +224,46 @@
 	concept_tec_gestalt_ethic: "Gestalt Ethic"
 	concept_tec_gestalt_ethics: "Gestalt Ethics"
 	concept_tec_gestalt_ethic_desc: "$concept_tec_gestalt_ethics$ are ethics that gestalt consciousness empires have, empires like ['authority:concept_auth_hive_mind'] or ['authority:auth_machine_intelligence'] empires, being mutually exclusive with ['concept_tec_regular_ethics'].\n\n$concept_tec_gestalt_ethics$ consist of\n- ['ethic:ethic_gestalt_consciousness']\n- ['ethic:ethic_gestalt_empathy']\n- ['ethic:ethic_gestalt_apathy']\n- ['ethic:ethic_gestalt_preservation']\n- ['ethic:ethic_gestalt_overconsumption']\n- ['ethic:ethic_gestalt_extrospective']\n- ['ethic:ethic_gestalt_introspective']"
-	
+
+	concept_tec_centrality_core_administrated: "Core Administrated"
+	concept_tec_centrality_core_administrated_icon: "£official£ Core Administrated"
+	concept_tec_centrality_core_administrated_desc: "£official£ Core Administrated Planets means planets with an §Y$tec_loc_leader_official$§! Governor§!"
+
+	concept_tec_booster_building: "Booster Building"
+	concept_tec_booster_building_icon: "£upgrade£ Booster Building"
+	concept_tec_booster_buildings: "Booster Buildings"
+	concept_tec_booster_buildings_icon: "£upgrade£ Booster Buildings"
+	concept_tec_booster_building_desc: "Booster Building are §Y£building£ Buildings§! that increase the production of §Y$tec_loc_research_resources$§!, §Y$tec_loc_unity$§!, $tec_loc_naval_cap$ Jobs.\n\n$concept_tec_booster_buildings$ consist of:\n$t$- ['building:building_tec_regular_military_booster_1']\n$t$- ['building:building_dread_encampment']\n$t$- ['building:building_tec_biohive_military_booster_1']\n$t$- ['building:building_tec_regular_research_booster_1']\n$t$- ['building:building_tec_gestalt_research_booster_1']\n$t$- ['building:building_tec_biohive_research_booster_1']\n$t$- ['building:building_tec_regular_unity_booster_1']\n$t$- ['building:building_tec_spiritualist_unity_booster_1']\n$t$- ['building:building_tec_corporate_unity_booster_1']\n$t$- ['building:building_tec_hive_unity_booster_1']\n$t$- ['building:building_tec_cyberhive_unity_booster_1']\n$t$- ['building:building_tec_biohive_unity_booster_1']\n$t$- ['building:building_tec_machine_unity_booster_1']"
+	building_concept_tec_booster_building_tag: "['concept_tec_booster_building']"
+
+	concept_tec_reprocessing_building: "Reprocessing Building"
+	concept_tec_reprocessing_building_icon: "£trigger_tec_basic_resources£ Reprocessing Building"
+	concept_tec_reprocessing_buildings: "Reprocessing Buildings"
+	concept_tec_reprocessing_buildings_icon: "£trigger_tec_basic_resources£ Reprocessing Buildings"
+	concept_tec_reprocessing_building_desc: "Reprocessing Buildings are §Y£building£ Buildings§! that improve the base production of §Y$tec_loc_basic_resources$§! Jobs.\n\n$concept_tec_reprocessing_buildings$ consist of:\n$t$- ['building:building_energy_grid']\n$t$- ['building:building_tec_biohive_energy_grid']\n$t$- ['building:building_mineral_purification_plant']\n$t$- ['building:building_tec_biohive_mineral_purification_plant']\n$t$- ['building:building_food_processing_facility']\n$t$- ['building:building_tec_biohive_food_processing_facility']"
+	building_tec_reprocessing_building_tag: "['concept_tec_reprocessing_building']"
+
+	concept_tec_manufacturing_building: "Manufacturing Building"
+	concept_tec_manufacturing_building_icon: "£alloys£ £consumer_goods£ Manufacturing Building"
+	concept_tec_manufacturing_buildings: "Manufacturing Buildings"
+	concept_tec_manufacturing_buildings_icon: "£alloys£ £consumer_goods£ Manufacturing Buildings"
+	concept_tec_manufacturing_building_desc: "Manufacturing Buildings are §Y£building£ Buildings§! that improve the base production of §Y$tec_loc_industrial_resources$§! Jobs.\n\n$concept_tec_manufacturing_booster_buildings$ consist of:\n$t$- ['building:building_foundry_1']\n$t$- ['building:building_tec_biohive_foundry_1']\n$t$- ['building:building_factory_1']\n$t$- ['building:building_tec_biohive_factory_1']"
+	building_concept_tec_manufacturing_building_tag: "['concept_tec_manufacturing_building']"
+
+	concept_tec_manufacturing_booster_building: "Manufacturing Booster Building"
+	concept_tec_manufacturing_booster_building_icon: "£alloys£ £consumer_goods£ Manufacturing Booster Building"
+	concept_tec_manufacturing_booster_buildings: "Manufacturing Booster Buildings"
+	concept_tec_manufacturing_booster_buildings_icon: "£alloys£ £consumer_goods£ Manufacturing Booster Buildings"
+	concept_tec_manufacturing_booster_building_desc: "Manufacturing Booster Buildings are §Y£building£ Buildings§! that multiply the production of §Y$tec_loc_industrial_resources$§! or §Y$tec_loc_strategic_resources$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_manufacturing_booster_buildings$ consist of:\n$t$- ['building:building_ministry_production']\n$t$- ['building:building_production_center']\n$t$- ['building:building_tec_biohive_industrial_booster_1']\n$t$- ['building:building_tec_strategic_optimizator']\n$t$- ['building:building_tec_biohive_strategic_booster_1']"
+	building_concept_tec_manufacturing_booster_building_tag: "['concept_tec_manufacturing_booster_building']"
+
+	concept_tec_leader_building: "Leader Building"
+	concept_tec_leader_building_icon: "£leader£ Leader Building"
+	concept_tec_leader_buildings: "Leader Buildings"
+	concept_tec_leader_buildings_icon: "£leader£ Leader Buildings"
+	concept_tec_leader_building_desc: "Leader Building are §Y£building£ Buildings§! that increase §Y$MOD_COUNTRY_LEADER_CAP_ADD$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_leader_buildings$ consist of:\n$t$- ['building:building_institute']\n$t$- ['building:building_supercomputer']\n$t$- ['building:building_tec_biohive_supercomputer']\n$t$- ['building:building_autocurating_vault']\n$t$- ['building:building_citadel_of_faith']\n$t$- ['building:building_corporate_vault']\n$t$- ['building:building_tec_hive_unity_vault']\n$t$- ['building:building_tec_cyberhive_unity_vault']\n$t$- ['building:building_tec_biohive_unity_vault']\n$t$- ['building:building_alpha_hub']\n$t$- ['building:building_military_academy']\n$t$- ['building:building_tec_gestalt_military_academy']\n$t$- ['building:building_tec_biohive_military_academy']"
+	building_concept_tec_leader_building_tag: "\n\n['concept_tec_leader_building']"
+
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
 	#concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
@@ -988,7 +1027,7 @@
 	concept_tec_specialist_job_calculator_plural: "$job_calculator_plural$"
 	concept_tec_specialist_job_calculator_plural_icon: "£job_calculator£ $job_calculator_plural$"
 	concept_tec_specialist_job_calculator_desc: "§L$job_calculator_desc$§!\n\n$job_calculator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_researchers_alias']\n\n$tec_loc_c_produces$: §Y£trigger_tec_research£ 4§!\n$tec_loc_c_upkeep$: §Y£energy£ 4§!"
-	
+
 	concept_tec_specialist_job_spawning_drone: "$job_spawning_drone$"
 	concept_tec_specialist_job_spawning_drone_alias: "$job_spawning_drone$"
 	concept_tec_specialist_job_spawning_drone_icon: "£job_spawning_drone£ $job_spawning_drone$"
@@ -1254,7 +1293,7 @@
 	concept_tec_worker_job_tec_thermogenerator_drone_plural: "$job_tec_thermogenerator_drone_plural$"
 	concept_tec_worker_job_tec_thermogenerator_drone_plural_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
 	concept_tec_worker_job_tec_thermogenerator_drone_desc: "§L$job_tec_thermogenerator_drone_desc$§!\n\n$job_tec_thermogenerator_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_simple_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_technician_alias']\n\n$tec_loc_amenities_gestalt$: §G+2§!\n$tec_loc_c_produces$: §Y£energy£ 8§!"
-	
+
 	concept_tec_worker_job_tec_mental_servant: "$job_tec_mental_servant$"
 	concept_tec_worker_job_tec_mental_servant_alias: "$job_tec_mental_servant$"
 	concept_tec_worker_job_tec_mental_servant_icon: "£job_tec_mental_servant£ $job_tec_mental_servant$"
@@ -1938,19 +1977,19 @@
 		concept_tec_policy_option_economic_policy_civilian_icon: "£policy£ $economic_policy_civilian$ Policy Option"
 		concept_tec_policy_option_economic_policy_civilian_alias_icon: "£policy£ $economic_policy_civilian$"
 		concept_tec_policy_option_economic_policy_civilian_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_civilian_desc$$mod_country_consumer_goods_produces_mult$: §G+25%§!\n$mod_country_alloys_produces_mult$: §R-25%§!"
-	
+
 		concept_tec_policy_option_economic_policy_balanced: "$economic_policy_balanced$ Policy Option"
 		concept_tec_policy_option_economic_policy_balanced_alias: "$economic_policy_balanced$"
 		concept_tec_policy_option_economic_policy_balanced_icon: "£policy£ $economic_policy_balanced$ Policy Option"
 		concept_tec_policy_option_economic_policy_balanced_alias_icon: "£policy£ $economic_policy_balanced$"
 		concept_tec_policy_option_economic_policy_balanced_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_balanced_desc$"
-	
+
 		concept_tec_policy_option_economic_policy_military: "$economic_policy_military$ Policy Option"
 		concept_tec_policy_option_economic_policy_military_alias: "$economic_policy_military$"
 		concept_tec_policy_option_economic_policy_military_icon: "£policy£ $economic_policy_military$ Policy Option"
 		concept_tec_policy_option_economic_policy_military_alias_icon: "£policy£ $economic_policy_military$"
 		concept_tec_policy_option_economic_policy_military_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_military_desc$$mod_country_alloys_produces_mult$: §G+25%§!\n$mod_country_consumer_goods_produces_mult$: §R-25%§!"
-	
+
 	concept_tec_policy_robot_pop_policy: "$policy_robot_pop_policy$ Policy"
   concept_tec_policy_robot_pop_policy_alias: "$policy_robot_pop_policy$"
 	concept_tec_policy_robot_pop_policy_icon: "£policy£ $policy_robot_pop_policy$ Policy"
@@ -2417,7 +2456,7 @@
 	concept_tec_eco_planet_technician_alias: "$planet_technician$"
 	concept_tec_eco_planet_technician_alias_icon: "£job_technician£ $planet_technician$"
 	concept_tec_eco_planet_technician_desc: "This category covers the jobs producing §Y$tec_loc_energy$§!, examples such as ['concept_tec_worker_job_technician_plural_icon'], ['concept_tec_worker_job_technician_drone_plural_icon'] and ['concept_tec_worker_job_tec_thermogenerator_drone_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
-	
+
 	concept_tec_eco_planet_tec_labour_heroes: "$planet_tec_labour_heroes$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_labour_heroes_icon: "£job_tec_labour_hero£ $planet_tec_labour_heroes$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_labour_heroes_alias: "$planet_tec_labour_heroes$"
