--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -264,6 +264,7 @@
 	tec_loc_effect_metallurgists: "£job_foundry£ $job_foundry_plural$"
 
 	tec_loc_section_core_sector: "§E£empire_capital£ §YCore§! Sector Planets:§!"
+	tec_loc_section_core_sector_and_administrated: "§E£empire£ §YCore§! Sector Planets and ['concept_tec_centrality_core_administrated_icon'] Planets:§!"
 	tec_loc_section_rim_sector: "§E£sector£ Non-§YCore§! Sector Planets:§!"
 
  #Situations	# TODO CODE REWORK - ICON
