--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -21,3 +21,10 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
 
  planet_automation_ai:0 " £time£ AI Automation"
  planet_automation_ai_desc: "Please ignore this, won't do anything for player"
+
+ preset_tec_satellite: "Satellite"
+ preset_tec_satellite_desc:0 "A Satellite is a Subject type with a an Overload with the $tr_tec_centrality_adopt$, and they are obligated to pay a monthly resource tax as part of their subject agreement. These type of Subject can only be released from a sector."
+ preset_tec_satellite_flavor_desc:0 "A Satellite serves as a subject to an empire that adopted the $tr_tec_centrality_adopt$. They are mostly independent on diplomatic affairs for economy and research, however they will follow the will of their overload in federation and galactic community. They have been given autonomy but technically still part of the overlord's empire."
+ tec_satellite: "$preset_tec_satellite$"
+ subject_holdings_limit_tec_satellite:0 "4"
+ subject_holdings_limit_tec_satellite_desc:1 "The Overlord can have 4 Holdings in total across the Subject's planets."
