--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -413,26 +413,35 @@
 
 	tr_tec_centrality_finish:0 "$tradition_tec_centrality$ Traditions Finished"
 	tr_tec_centrality_finish_gestalt:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_tooltip:4 "$tec_loc_section_core_sector$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime$: §R+10§!\n$t$- $tec_loc_trade_value$: §R-10%§!\n$t$- This effect scales with distance from §Y£empire_capital£Core Sector§!"
-	tr_tec_centrality_finish_gestalt_tooltip:4 "$tec_loc_section_core_sector$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime_gestalt$: §R+20§!\n$t$- This effect scales with distance from §Y£empire_capital£Core Sector§!"
+	tr_tec_centrality_finish_tooltip:4 "$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime$: §R+10§!\n$t$- $tec_loc_trade_value$: §R-10%§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
+	tr_tec_centrality_finish_gestalt_tooltip:4 "$tec_loc_section_core_sector_and_administrated$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime_gestalt$: §R+20§!\n$t$- This effect scales with distance from §Y£empire£Core Sector§!"
 	tr_tec_centrality_finish_tooltip_OLD:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
 
 
-	tr_tec_centrality_1:0 "Unquestionable Decision-making"
-	tr_tec_centrality_1_tooltip:0 "§YFactions§! output: §G+10%§!."
-	tr_tec_centrality_1_delayed:0 "It's not only matter of making decisions, but making the correct ones."
+	tr_tec_centrality_1:0 "Core Authority"
+	tr_tec_centrality_1_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §G+50%§!\n\n$tec_loc_section_rim_sector$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §R-50%§!"
+	tr_tec_centrality_1_delayed:0 "Power flows from the center, ensuring only the most vital regions shape our destiny. The core thrives, while the fringes follow."
 
-	tr_tec_centrality_1_gestalt:0 "Confluent Decisions"
-	tr_tec_centrality_1_gestalt_tooltip:0 "£unity£ §YEdict§! upkeep: §G-10%§!."
-	tr_tec_centrality_1_gestalt_delayed:0 "As united mind, decisions are debated by infinite voices and processes, so only the correct ones should be filtered out the echo."
+	tr_tec_centrality_1_gestalt:0 "Inner Focus"
+	tr_tec_centrality_1_gestalt_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G-15%§!\n\n$tec_loc_section_rim_sector$\n$t$- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §R+30%§!"
+	tr_tec_centrality_1_gestalt_delayed:0 "Directing our attention to centralized hubs, we refine administrative structures for maximum efficiency, while reducing expansion in the periphery."
 
 	tr_tec_centrality_2:0 "Ruling Elite"
-	tr_tec_centrality_2_tooltip:0 "£pop_cat_ruler£ §YRulers§! produce §G+2§! additional §Y$tec_loc_unity$§!."
+	tr_tec_centrality_2_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- £building£ Capital Buildings provide extra ['concept_tec_ruler_job_standard_plural_icon'] Jobs\n\nThese jobs are swapped accordingly to ['concept_tec_ruler_replace_civic']"
 	tr_tec_centrality_2_delayed:0 "Those who locally control our worlds are those who need to take responsibilities and be the best of the best."
 
-	tr_tec_centrality_2_gestalt:0 "Layered Complexity"
-	tr_tec_centrality_2_gestalt_tooltip:0 "£pop_cat_complex_drone£ §YComplex drones§! output increased by §G5%§!."
-	tr_tec_centrality_2_gestalt_delayed:0 "Intricate layers of different drone complexity and capacities ensure our survival as a whole."
+	tr_tec_centrality_2_machine:0 "Prime Enforcement"
+	tr_tec_centrality_2_machine_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- ['concept_tec_prime_drones_icon'] Base Output (and Modifiers): §G+50%§!\n$t$- Modifiers from ['concept_tec_directive_civics'] on ['concept_tec_prime_drones_icon']: §G+100%§!"
+	tr_tec_centrality_2_machine_delayed:0 "By refining the core directives of our prime drones, efficiency is maximized, ensuring optimal performance in fulfilling the objectives set."
+
+	tr_tec_centrality_2_hive:0 "Synaptic Confluence"
+	tr_tec_centrality_2_hive_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- £building£ Capital Buildings provide extra ['concept_tec_specialist_job_synapse_drone_plural_icon'] Jobs\n\nThese jobs are swapped accordingly to ['concept_tec_brood_capital_civic']"
+	tr_tec_centrality_2_hive_delayed:0 "Synaptic connections between the hives strengthen, harmonious convergence ensues, fostering greater cohesion and purpose."
+
+
+	tr_tec_centrality_2_gestalt_OLD:0 "Layered Complexity"
+	tr_tec_centrality_2_gestalt_tooltip_OLD:0 "£pop_cat_complex_drone£ §YComplex drones§! output increased by §G5%§!."
+	tr_tec_centrality_2_gestalt_delayed_OLD:0 "Intricate layers of different drone complexity and capacities ensure our survival as a whole."
 
 	tr_tec_centrality_3:0 "The Grand Game"
 	tr_tec_centrality_3_tooltip:0 "§YDiplomatic Weight§! increased by §G10%§!."
@@ -442,12 +451,12 @@
 	tr_tec_centrality_3_autarchy_tooltip:0 "Jobs §YOutput§! increased by §G5%§!, but job §YUpkeep§! is also increased by §R5%§! ."
 	tr_tec_centrality_3_autarchy_delayed:0 "Balancing economy will lead to controlling every aspect of it."
 
-	tr_tec_centrality_4:0 "Embracing Change"
-	tr_tec_centrality_4_tooltip:0 "Planetary Ascension Cost: §G-15%§!."
-	tr_tec_centrality_4_delayed:0 "Constant change and evolution is what bring us here, and is what will bring us forward."
+	tr_tec_centrality_4:0 "Sovereign Satellites"
+	tr_tec_centrality_4_tooltip:0 "Unlocks the §Y$preset_tec_satellite$§! Vassal Type\n- $subject_integration$: §Y$subject_can_not_be_integrated$§!\n- $subject_diplomacy$: §Y$subject_can_do_diplomacy_but_not_vote$§!\n- $subject_expand$: §Y$subject_cannot_expand$§!\n- $joins_overlord_wars$: §Y$joins_overlord_wars_all$§!\n- $joins_subject_wars$: §Y$joins_subject_wars_all$§!\n- $subject_holdings_limit$: §Y$subject_holdings_limit_tec_satellite$§!\n- $subject_sensors$: §Y$subject_gets_sensors$§!\n- $resource_subsidies_basic$: §G15%§!\n- $resource_subsidies_advanced$: §G15%§!\n- $resource_subsidies_research$: §G15%§!\n- $resource_subsidies_strategic$: §G15%§!\n- Country does not count against §Y$divided_patronage$§!"
+	tr_tec_centrality_4_delayed:0 ""Empowering satellite regions as vassals, we cultivate loyal allies who share our vision, strengthening our influence and securing our dominion across the stars."
 
-		tr_tec_centrality_final_1:0 "Flexible Status"
-		tr_tec_centrality_final_1_text:0 "$tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+2§!"
+		tr_tec_centrality_final_1:0 "Administrative Overview"
+		tr_tec_centrality_final_1_text:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- Jobs from ['concept_tec_leader_buildings_icon'], ['concept_tec_manufacturing_booster_buildings'], ['concept_tec_booster_buildings_icon']: §Gx2§!"
 		tr_tec_centrality_final_1_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_1_text$"
 		tr_tec_centrality_final_1_delayed:0 "Coordinating a whole empire requires a great degree of flexibility and effective utility."
 
@@ -455,39 +464,39 @@
 		tr_tec_centrality_final_1_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_1_text$"
 		tr_tec_centrality_final_1_disabled_delayed:0 "$tr_tec_centrality_final_1_delayed$"
 
-		tr_tec_centrality_final_2:0 "Inflection Point"
-		tr_tec_centrality_final_2_text:0 "Capital buildings provide up to 2 extra §YImperial Arbiters§!, extra efficient Ruler jobs.\n\nImperial Arbiters generate §Y$tec_loc_amenities$§!, and §YExtra bonuses§! based on your empire §YAuthority and Ethics§!."
-		tr_tec_centrality_final_2_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_text$"
-		tr_tec_centrality_final_2_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		tr_tec_centrality_final_2:0 "Governance Ascendancy"
+		tr_tec_centrality_final_2_text_OLD:0 "Capital buildings provide up to 2 extra §YImperial Arbiters§!, extra efficient Ruler jobs.\n\nImperial Arbiters generate §Y$tec_loc_amenities$§!, and §YExtra bonuses§! based on your empire §YAuthority and Ethics§!."
+		tr_tec_centrality_final_2_tooltip:0 "$tec_tradition_swap_warning$"
+		tr_tec_centrality_final_2_delayed:0 "With centralized and focused administration, comes the ascendance of the government, waste and discord left behind."
 
-		tr_tec_centrality_final_2_disabled:0 "Inflection Point"
-		tr_tec_centrality_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_text$"
+		tr_tec_centrality_final_2_disabled:0 "$tr_tec_centrality_final_2$"
+		tr_tec_centrality_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$"
 		tr_tec_centrality_final_2_disabled_delayed:0 "$tr_tec_centrality_final_2_delayed$"
 
-		tr_tec_centrality_final_2_hive:0 "Inflection Point"
-		tr_tec_centrality_final_2_hive_text:0 "Capital buildings provide up to 2 extra §YBehavioral Regulators§!, extra efficient Complex Drones.\n\nBehavioral Regulators generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
-		tr_tec_centrality_final_2_hive_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_hive_text$"
-		tr_tec_centrality_final_2_hive_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		# tr_tec_centrality_final_2_hive:0 "Inflection Point"
+		# tr_tec_centrality_final_2_hive_text:0 "Capital buildings provide up to 2 extra §YBehavioral Regulators§!, extra efficient Complex Drones.\n\nBehavioral Regulators generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
+		# tr_tec_centrality_final_2_hive_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_hive_text$"
+		# tr_tec_centrality_final_2_hive_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		#
+		# tr_tec_centrality_final_2_hive_disabled:0 "Inflection Point"
+		# tr_tec_centrality_final_2_hive_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_hive_text$"
+		# tr_tec_centrality_final_2_hive_disabled_delayed:0 "$tr_tec_centrality_final_2_hive_delayed$"
+		#
+		# tr_tec_centrality_final_2_machine:0 "Inflection Point"
+		# tr_tec_centrality_final_2_machine_text:0 "Capital buildings provide up to 2 extra §YCommand Relays§!, extra efficient Complex Drones.\n\nCommand Relays generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
+		# tr_tec_centrality_final_2_machine_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_machine_text$"
+		# tr_tec_centrality_final_2_machine_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		#
+		# tr_tec_centrality_final_2_machine_disabled:0 "Inflection Point"
+		# tr_tec_centrality_final_2_machine_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_machine_tooltip$"
+		# tr_tec_centrality_final_2_machine_disabled_delayed:0 "$tr_tec_centrality_final_2_machine_delayed$"
 
-		tr_tec_centrality_final_2_hive_disabled:0 "Inflection Point"
-		tr_tec_centrality_final_2_hive_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_hive_text$"
-		tr_tec_centrality_final_2_hive_disabled_delayed:0 "$tr_tec_centrality_final_2_hive_delayed$"
-
-		tr_tec_centrality_final_2_machine:0 "Inflection Point"
-		tr_tec_centrality_final_2_machine_text:0 "Capital buildings provide up to 2 extra §YCommand Relays§!, extra efficient Complex Drones.\n\nCommand Relays generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
-		tr_tec_centrality_final_2_machine_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_machine_text$"
-		tr_tec_centrality_final_2_machine_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
-
-		tr_tec_centrality_final_2_machine_disabled:0 "Inflection Point"
-		tr_tec_centrality_final_2_machine_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_machine_tooltip$"
-		tr_tec_centrality_final_2_machine_disabled_delayed:0 "$tr_tec_centrality_final_2_machine_delayed$"
-
-		tr_tec_centrality_final_3:0 "Increased Self-management"
-		tr_tec_centrality_final_3_text:0 ""
+		tr_tec_centrality_final_3:0 "Auxiliary Administration"
+		tr_tec_centrality_final_3_text:0 "Unlocks the ['building:holding_tec_centrality_core_administration'] Holding on $preset_tec_satellite$ Vassals"
 		tr_tec_centrality_final_3_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_3_text$"
-		tr_tec_centrality_final_3_delayed:0 "Releasing administrative loads from our settlements and colonies will greatly soothe our overall administrative load."
+		tr_tec_centrality_final_3_delayed:0 "Releasing our fringe colonies will greatly soothe our overall administrative load."
 
-		tr_tec_centrality_final_3_disabled:0 "Increased Self-management"
+		tr_tec_centrality_final_3_disabled:0 "$tr_tec_centrality_final_3$"
 		tr_tec_centrality_final_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_3_text$"
 		tr_tec_centrality_final_3_disabled_delayed:0 "$tr_tec_centrality_final_3_delayed$"
 
